version/0.28/_sources/api/solver/_autosummary/settings/dqmom_boundary_condition.rst.txt
:orphan:

.. _dqmom_boundary_condition:

dqmom_boundary_condition
========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.dqmom_boundary_condition
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`dqmom_boundary_condition_child <dqmom_boundary_condition_child>`


.. rubric:: Included in:

==============================================   ============================================================

Parent                                                                                                Summary

==============================================   ============================================================
:ref:`population_balance <population_balance>`                                   Population balance settings.

:ref:`multiphase_6 <multiphase_6>`                   Allows to change multiphase model variables or settings.

==============================================   ============================================================

